fixed spacing on aside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,17 +66,6 @@ p {
     margin-left: 25px;
 }
 
-aside {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-aside {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
 .content {
     width: 75%;
     display: inline-block;
@@ -93,7 +82,15 @@ aside {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
+.benefit-lead, .benefit-brand, .benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
 
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
 
 .benefit-lead img,.benefit-brand img,.benefit-cost img {
     display: block;
